# open-pit-wall

./: .gitignore  AGENTS.md  INSTALL.txt  README.md  main.py  opencode.json  pyproject.toml  pyrightconfig.json  requirements.txt
.opencode/: memory-link.md
data-examples/: leaderboard_telemetry.json  multiple_driver_telemetry.json  race_control_message.json  single_driver_telemetry copy.json
examples/driver-telemetry-trace/: README.md  main.py
open_pit_wall/: __init__.py  __main__.py  cli_menu.py  data_loader.py  main.py  telemetry_broadcaster.py
open_pit_wall/lib/: __init__.py  time.py
tests/: test_cli_interrupts.py  test_data_loader.py  test_driver_telemetry_trace.py  test_main.py  test_telemetry_broadcaster.py
