[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-pit-wall"
version = "0.1.0"
description = "CLI race loader for Open Pit Wall"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Tom Shaw"}]
keywords = ["formula1", "telemetry", "websocket", "motorsport"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "fastf1",
  "pandas",
  "matplotlib",
  "numpy",
  "questionary",
  "rich",
  "websockets",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
]

[project.urls]
Homepage = "https://github.com/IAmTomShaw/open-pit-wall"
Repository = "https://github.com/IAmTomShaw/open-pit-wall"
Issues = "https://github.com/IAmTomShaw/open-pit-wall/issues"

[project.scripts]
open-pit-wall = "open_pit_wall.main:main"

[tool.setuptools.packages.find]
include = ["open_pit_wall", "open_pit_wall.*"]
